@@ -1,11 +1,11 @@
 dnl ------------------------------------------------------------------------- 
-dnl $Id: configure.in,v 1.167 2015/05/18 05:22:45 urabe Exp $
+dnl $Id: configure.in,v 1.168 2015/06/02 03:18:27 urabe Exp $
 dnl -------------------------------------------------------------------------
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT
 AC_CONFIG_SRCDIR([src/win.c])
 AC_CANONICAL_TARGET
-AM_INIT_AUTOMAKE(WIN_pkg, 2.2.18)
+AM_INIT_AUTOMAKE(WIN_pkg, 2.2.19)
 AC_CONFIG_HEADERS([config.h])
 AC_ARG_PROGRAM
 
